--- a/front/src/app.html
+++ b/front/src/app.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="text-lg flex flex-col">
+  <body data-sveltekit-preload-data="hover" class="text-lg flex flex-col" tabIndex="-1">
     <noscript>
       <style>
 		/* TODO: apply styles for JS-disabled viewers */
