--- a/front/static/404.html
+++ b/front/static/404.html
@@ -94,20 +94,24 @@
   ></script>
   <script>
     const { hostname: e } = document.location;
-    let environment;
-    (environment = e.includes("local")
+    const environment = e.includes("local")
       ? "development"
       : e.includes("stg")
       ? "staging"
-      : "production"),
-      Sentry.init({
-        dsn:
-          "https://02b9c4dc55d14cf5bbdd30b7e592eb9a@o4505287560462336.ingest.sentry.io/4505312527187968",
-        tracesSampleRate: 1,
-        environment,
-      }),
-      Sentry.captureMessage("Page Not Found", {
-        page: document.location.pathname,
-      });
+      : "production";
+    Sentry.init({
+      dsn:
+        "https://02b9c4dc55d14cf5bbdd30b7e592eb9a@o4505287560462336.ingest.sentry.io/4505312527187968",
+      tracesSampleRate: 1,
+      environment,
+      beforeSend(event) {
+        if (event.user) {
+          delete event.user.ip
+        }
+      }
+    }),
+    Sentry.captureMessage("Page Not Found", {
+      page: document.location.pathname,
+    });
   </script>
 </html>
