build(front): removes server_name from sentry events

--- a/front/static/404.html
+++ b/front/static/404.html
@@ -107,6 +107,7 @@
       beforeSend(event) {
         if (event.user) {
           delete event.user.ip
+          delete event.server_name
         }
       }
     }),
