fix(front): refactor beforeSend scrub conditionals

--- a/front/static/404.html
+++ b/front/static/404.html
@@ -106,11 +106,13 @@
       environment,
       beforeSend(event) {
         if (event.user) {
-          delete event.user.ip
-          delete event.server_name
+          delete event.user.ip;
         }
-      }
-    }),
+        if (event.server_name) {
+          delete event.server_name;
+        }
+      },
+    });
     Sentry.captureMessage("Page Not Found", {
       page: document.location.pathname,
     });
