--- a/front/src/app.html
+++ b/front/src/app.html
@@ -5,14 +5,10 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     %sveltekit.head%
     <noscript>
-      <link rel="stylesheet" href="/styles/noscript.css">
+      <link rel="stylesheet" href="/styles/noscript.css" />
     </noscript>
   </head>
-  <body
-    data-sveltekit-preload-data="hover"
-    class="text-lg flex flex-col"
-    tabindex="-1"
-  >
+  <body data-sveltekit-preload-data="hover" tabindex="-1">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
