build(front): adds wrapping div back to svelte app.html

--- a/front/src/app.html
+++ b/front/src/app.html
@@ -1,18 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-    <link rel="preload" as="font" href="/fonts/PublicSans-ExtraLight.woff2" type="font/woff2" crossorigin>
-    <link rel="preload" as="font" href="/fonts/PublicSans-Regular.woff2" type="font/woff2" crossorigin>
-    <link rel="preload" as="font" href="/fonts/PublicSans-Bold.woff2" type="font/woff2" crossorigin>
-    <link rel="preload" as="font" href="/fonts/PublicSans-Black.woff2" type="font/woff2" crossorigin>
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/PublicSans-ExtraLight.woff2"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/PublicSans-Regular.woff2"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/PublicSans-Bold.woff2"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/PublicSans-Black.woff2"
+      type="font/woff2"
+      crossorigin
+    />
     %sveltekit.head%
     <noscript>
       <link rel="stylesheet" href="/styles/noscript.css" />
     </noscript>
   </head>
   <body data-sveltekit-preload-data="hover" tabindex="-1">
-    %sveltekit.body%
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
