--- a/front/src/app.html
+++ b/front/src/app.html
@@ -1,36 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-    <link
-      rel="preload"
-      as="font"
-      href="/fonts/PublicSans-ExtraLight.woff2"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      as="font"
-      href="/fonts/PublicSans-Regular.woff2"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      as="font"
-      href="/fonts/PublicSans-Bold.woff2"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      as="font"
-      href="/fonts/PublicSans-Black.woff2"
-      type="font/woff2"
-      crossorigin
-    />
     %sveltekit.head%
     <noscript>
       <link rel="stylesheet" href="/styles/noscript.css" />
