--- a/front/static/404.html
+++ b/front/static/404.html
@@ -22,35 +22,57 @@
     />
     <style>
       @font-face {
-        font-display: swap;
-        font-family: "Public Sans";
         src: url("/fonts/PublicSans-Regular.woff2") format("woff2"),
           url("/fonts/PublicSans-Regular.woff") format("woff"),
           url("/fonts/PublicSans-Regular.ttf") format("truetype"),
           url("/fonts/PublicSans-Regular.otf") format("opentype");
+        font-family: "Public Sans";
+        font-display: swap;
       }
       @font-face {
-        font-display: swap;
-        font-family: "Public Sans Black";
         src: url("/fonts/PublicSans-Black.woff2") format("woff2"),
           url("/fonts/PublicSans-Black.woff") format("woff"),
           url("/fonts/PublicSans-Black.ttf") format("truetype"),
           url("/fonts/PublicSans-Black.otf") format("opentype");
+        font-family: "Public Sans Black";
+        font-display: swap;
+      }
+      @font-face {
+        src: url("/fonts/PublicSans-ExtraLight.woff2") format("woff2");
+        font-family: "Public Sans Extra Light";
+        font-display: swap;
+      }
+
+      @media (prefers-color-scheme: light) {
+        :root {
+          --foreground-rgb: 33, 33, 33;
+          --background-start-rgb: 214, 219, 220;
+          --background-end-rgb: 255, 255, 255;
+        }
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --foreground-rgb: 223, 224, 224;
+          --background-start-rgb: 35, 36, 38;
+          --background-end-rgb: 29, 30, 32;
+        }
       }
       html,
       body {
-        font-family: "Public Sans", sans-serif;
-        height: 100%;
-      }
-      body {
-        align-items: center;
-        background-color: rgb(127, 127, 127);
-        color: rgb(223, 224, 224);
         display: flex;
         flex-direction: column;
         justify-content: center;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0 0 1em rgba(0, 0, 0, 0.5),
-          0 0 0.2em rgba(0, 0, 0, 0.5);
+        align-items: center;
+        background: linear-gradient(
+            to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))
+          )
+          rgb(var(--background-start-rgb));
+        height: 100%;
+        color: rgb(var(--foreground-rgb));
+        font-family: "Public Sans", sans-serif;
       }
       .not-found {
         display: flex;
@@ -58,25 +80,34 @@
         align-items: center;
       }
       h1 {
-        align-self: center;
-        font-family: "Public Sans Black", sans-serif;
-        font-size: 11rem;
         justify-content: center;
+        align-self: center;
         margin: 0;
+        font-size: 3.33rem;
+        font-family: "Public Sans Black", sans-serif;
         text-align: center;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0 0 1em rgba(0, 0, 0, 0.5),
-          0 0 0.2em rgba(0, 0, 0, 0.5);
       }
       a {
-        border-bottom: 1px solid rgba(223, 224, 224, 0.84);
-        color: rgba(223, 224, 224, 0.84);
-        padding-bottom: 2px;
-        text-decoration: none;
         transition: color 0.5s ease-in-out, border-color 0.5s ease-in-out;
+        border-bottom: 1px solid rgba(223, 224, 224, 0.84);
+        padding-bottom: 2px;
+        color: rgb(var(--foreground-rgb));
+        font-family: "Public Sans Extra Light", sans-serif;
+        text-decoration: none;
       }
       a:hover {
         border-color: yellow;
         color: yellow;
+      }
+      @media screen and (min-width: 333px) {
+        h1 {
+          font-size: 5rem;
+        }
+      }
+      @media screen and (min-width: 640px) {
+        h1 {
+          font-size: 11rem;
+        }
       }
     </style>
   </head>
@@ -100,8 +131,7 @@
       ? "staging"
       : "production";
     Sentry.init({
-      dsn:
-        "https://02b9c4dc55d14cf5bbdd30b7e592eb9a@o4505287560462336.ingest.sentry.io/4505312527187968",
+      dsn: "https://02b9c4dc55d14cf5bbdd30b7e592eb9a@o4505287560462336.ingest.sentry.io/4505312527187968",
       tracesSampleRate: 1,
       environment,
       beforeSend(event) {
