--- a/front/src/app.html
+++ b/front/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://p.dgrebb.com">
     <link
       rel="shortcut icon"
       href="%sveltekit.assets%/favicon.ico"
