build(front): adjusts font and colors; adds `theme-color` to `app.html`

--- a/front/src/app.html
+++ b/front/src/app.html
@@ -1,8 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="preconnect" href="https://p.dgrebb.com">
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="rgb(230, 211, 224)"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="rgb(11, 11, 11)"
+    />
+    <link rel="preconnect" href="https://p.dgrebb.com" />
     <link
       rel="shortcut icon"
       href="%sveltekit.assets%/favicon.ico"
