feat(front): adds sentry preconnect entry and adds cross-origin to plausible connection

--- a/front/src/app.html
+++ b/front/src/app.html
@@ -12,7 +12,16 @@
       media="(prefers-color-scheme: dark)"
       content="rgb(11, 11, 11)"
     />
-    <link rel="preconnect" href="https://p.dgrebb.com" />
+    <link
+      rel="preconnect"
+      href="https://p.dgrebb.com"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preconnect"
+      href="https://o4505287560462336.ingest.sentry.io"
+      crossorigin="anonymous"
+    />
     <link
       rel="shortcut icon"
       href="%sveltekit.assets%/favicon.ico"
