build(ci): updates to tf reports and lighthouse index files; updates lighthouse workflow config

--- a/_tf/modules/reports/index.html
+++ b/_tf/modules/reports/index.html
@@ -1,13 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dgrebb.com Reports</title>
-</head>
-<body>
-    <img src="https://github.com/dgrebb/dgrebb.com/actions/workflows/bdt-fe.yml/badge.svg" alt="Build, Deploy, and Test Badge" />
-    <a href="/lighthouse">Lighthouse Report</a>
-    <a href="/backstop">Backstop Report</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lighthouse Reports</title>
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+      }
+      body {
+        background-color: rgb(33 33 33);
+        color: rgb(216, 255, 224);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: Helvetica;
+        margin: 0;
+        padding: 0;
+      }
+      main {
+        flex-grow: 1;
+        margin: 0;
+        padding: 0;
+        width: 50%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      main h1 {
+        margin-bottom: 1rem;
+      }
+      main h2 {
+        font-weight: lighter;
+        margin: 0 0 0.5rem 0;
+      }
+      main ul {
+        display: flex;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+      }
+      main li {
+        margin: 0 0.33rem;
+      }
+      main a {
+        color: rgb(144, 229, 144);
+        text-decoration: none;
+        margin: 0.5rem 0;
+        padding: 1rem 2rem;
+        background-color: rgb(8, 63, 8);
+        border: thin solid rgb(0, 102, 0);
+        transition-property: background-color, color;
+        transition-duration: 333ms;
+        display: inline-block;
+        text-transform: capitalize;
+      }
+      main a:hover {
+        color: rgb(221, 255, 221);
+        background-color: rgb(10, 69, 10);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <img
+        src="https://github.com/dgrebb/dgrebb.com/actions/workflows/bdt-fe.yml/badge.svg"
+        alt="Build, Deploy, and Test Badge"
+      />
+      <ul>
+        <li><a href="/lighthouse">Lighthouse Report</a></li>
+        <li><a href="/backstop">Backstop Report</a></li>
+      </ul>
+    </main>
+  </body>
 </html>
