--- a/_tf/modules/reports/404/index.html
+++ b/_tf/modules/reports/404/index.html
@@ -1,1 +1,94 @@
-no
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>dgrebb.com Reports</title>
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+      }
+      body {
+        background-color: rgb(33 33 33);
+        color: rgb(216, 255, 224);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: Helvetica;
+        margin: 0;
+        padding: 0;
+      }
+      main {
+        flex-grow: 1;
+        margin: 0;
+        padding: 0;
+        width: 50%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      main img.backhouse {
+        margin-bottom: 2rem;
+      }
+      main h1 {
+        margin-bottom: 1rem;
+      }
+      main h2 {
+        font-weight: lighter;
+        margin: 0 0 0.5rem 0;
+      }
+      div.badges {
+        display: flex;
+        flex-wrap: wrap;
+        width: 999px;
+        justify-content: center;
+        img {
+          padding: 0.5rem;
+        }
+      }
+      main ul {
+        display: flex;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        margin: 1.33rem 0;
+      }
+      main li {
+        margin: 0 0.33rem;
+      }
+      main a {
+        color: rgb(144, 229, 144);
+        text-decoration: none;
+        margin: 0.5rem 0;
+        padding: 1rem 2rem;
+        background-color: rgb(8, 63, 8);
+        border: thin solid rgb(0, 102, 0);
+        transition-property: background-color, color;
+        transition-duration: 333ms;
+        display: inline-block;
+        text-transform: capitalize;
+      }
+      main a:hover {
+        color: rgb(221, 255, 221);
+        background-color: rgb(10, 69, 10);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <img
+        src="/img/backhouse.jpg"
+        height="333"
+        width="333"
+        class="backhouse"
+      />
+      <h1>NOPE</h1>
+      <h2>nothing here ¯\_(ツ)_/¯</h2>
+    </main>
+  </body>
+</html>
