build(ci): includes lighthouse and psi in build/deploy/test workflow

--- a/_tf/modules/reports/index.html
+++ b/_tf/modules/reports/index.html
@@ -45,7 +45,7 @@
       div.badges {
         display: flex;
         flex-wrap: wrap;
-        width: 999px;
+        width: 477px;
         justify-content: center;
         img {
           padding: 0.5rem;
@@ -106,10 +106,16 @@
           loading="lazy"
           height="20"
         />
+        <img
+          src="https://github.com/dgrebb/dgrebb.com/actions/workflows/test-psi.yml/badge.svg"
+          alt="PageSpeed Insights Audit Badge"
+          loading="lazy"
+          height="20"
+        />
       </div>
       <ul>
-        <li><a href="/lighthouse">Lighthouse Report</a></li>
         <li><a href="/backstop">Backstop Report</a></li>
+        <li><a href="/lighthouse">Lighthouse Reports</a></li>
       </ul>
     </main>
   </body>
