fix(terraform): updates target healthcheck and link var replacement

--- a/_tf/modules/reports/index.html
+++ b/_tf/modules/reports/index.html
@@ -133,7 +133,7 @@
       const path = env.includes("stg") ? "gh-stg" : "gh-prd";
       document.querySelector(
         ".test-link--backstop"
-      ).href = `/backstop/html_report/${env}/index.html`;
+      ).href = `/backstop/html_report/${path}/index.html`;
     </script>
   </body>
 </html>
