fix(front): applies prettier fixes; adds  for

--- a/front/static/404.html
+++ b/front/static/404.html
@@ -126,7 +126,7 @@
     src="https://js.sentry-cdn.com/02b9c4dc55d14cf5bbdd30b7e592eb9a.min.js"
     crossorigin="anonymous"
   ></script>
-  <script id=""four-ohhhhh-four>
+  <script id="four-ohhhhh-four">
     const { hostname: e } = document.location;
     const environment = e.includes('local')
       ? 'development'
