build(ci): adds linting badge to reports page

--- a/_tf/modules/reports/index.html
+++ b/_tf/modules/reports/index.html
@@ -95,6 +95,12 @@
           loading="lazy"
         />
         <img
+          src="https://github.com/dgrebb/dgrebb.com/actions/workflows/lint.yml/badge.svg"
+          alt="Lint status badge"
+          loading="lazy"
+          height="20"
+        />
+        <img
           src="https://github.com/dgrebb/dgrebb.com/actions/workflows/test-backstop.yml/badge.svg"
           alt="BackstopJS Test Badge"
           loading="lazy"
