fix(front): uses absolute path for favicon assets (#839)

--- a/front/src/app.html
+++ b/front/src/app.html
@@ -22,54 +22,47 @@
       href="https://o4505287560462336.ingest.sentry.io"
       crossorigin="anonymous"
     />
-    <link
-      rel="shortcut icon"
-      href="%sveltekit.assets%/favicon.ico"
-      type="image/x-icon"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="%sveltekit.assets%/apple-touch-icon.png"
-    />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="%sveltekit.assets%/apple-touch-icon-57x57.png"
+      href="/apple-touch-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="%sveltekit.assets%/apple-touch-icon-72x72.png"
+      href="/apple-touch-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%sveltekit.assets%/apple-touch-icon-76x76.png"
+      href="/apple-touch-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="%sveltekit.assets%/apple-touch-icon-114x114.png"
+      href="/apple-touch-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="%sveltekit.assets%/apple-touch-icon-120x120.png"
+      href="/apple-touch-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="%sveltekit.assets%/apple-touch-icon-144x144.png"
+      href="/apple-touch-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="%sveltekit.assets%/apple-touch-icon-152x152.png"
+      href="/apple-touch-icon-152x152.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%sveltekit.assets%/apple-touch-icon-180x180.png"
+      href="/apple-touch-icon-180x180.png"
     />
     %sveltekit.head%
     <noscript>
